--- a/index.html
+++ b/index.html
@@ -5,6 +5,141 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link href="fonts/fonts.css" rel="stylesheet">
+    <link href="styles/global.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
   </head>
-  <body></body>
+  <body class="body">
+    <header class="header">
+      <nav>
+        <ul class="header__menu header__links-list">
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <img
+        class="header__logo"
+        src="./images/logo-black.svg"
+        alt="Логотип проекта"
+      />
+      <address class="header__address">
+        <a class="address" href="tel:+70000000">+9 999 555 5555</a><br>
+        <a class="address" href="mailto:mail@example.com">info@sobaka.ge</a><br>
+        <a class="address">наб. Принсенграхт 263-265, <br> Амстердам</a>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span> 
+        </h1>
+          <h1 class="cover__title">
+            <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+        </h1> 
+        <h1 class="cover__title">
+            <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+        </h1>
+        <div class="cover__description">
+          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <article>
+          <ul class="lots__card-list lots__card-list-item">
+            <li class="card card_type_film">
+              <div class="overlay"></div>
+              <h3 class="card__title" href="#0">Фильм режиссёра, который бросил киношколу</h3>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+            </li>
+            <li class="card card_type_book">
+              <div class="overlay"></div>
+              <h3 class="card__title" href="#0">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+            </li>
+            <li class="card card_type_picture">
+              <div class="overlay"></div>
+              <h3 class="card__title" href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+            </li>
+          </ul>
+        </article>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__logo">
+          <img
+          class="about__logo-image"
+          src="./images/logo-white.svg"
+          alt="Логотип проекта"
+          />
+        </div>
+        <div>
+          <h2 class="about__title">Об аукционе</h2>
+          <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about__text no-margin-bottom">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+        <address>
+          <a class="address" href="tel:+70000000">+9 999 555 5555</a><br>
+          <a class="address" href="mailto:mail@example.com">info@sobaka.ge</a><br>
+          <a class="address">наб. Принсенграхт 263-265, <br> Амстердам</a>
+        </address>
+        <nav>
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link_active">главная</a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="#0">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <div>
+          <ul class="footer__social-list footer__social-list-item">
+            <li>
+              <a href="#0">
+                <img
+                class="footer__social-icon"
+                src="./images/yt.svg"
+                alt="Ссылка на ютуб"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#0">
+                <img
+                class="footer__social-icon"
+                src="./images/vk.svg"
+                alt="Ссылка на ВКонтакте"
+                />
+              </a>
+            </li>
+            <li>  
+              <a href="#0">
+                <img
+                class="footer__social-icon"
+                src="./images/pinterest.svg"
+                alt="Ссылка на pinterest"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+    </footer>
+  </body>
 </html>
