--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
           </li>
         </ul>
       </nav>
-      <img
-        class="header__logo"
-        src="./images/logo-black.svg"
-        alt="Логотип проекта"
-      />
+      <a href="#0">
+        <img
+          class="header__logo"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        />
+      </a>
       <address class="header__address">
         <a class="address" href="tel:+70000000">+9 999 555 5555</a><br>
         <a class="address" href="mailto:mail@example.com">info@sobaka.ge</a><br>
@@ -58,17 +60,17 @@
           <ul class="lots__card-list lots__card-list-item">
             <li class="card card_type_film">
               <div class="overlay"></div>
-              <h3 class="card__title" href="#0">Фильм режиссёра, который бросил киношколу</h3>
+              <a class="card__title" href="#0">Фильм режиссёра, который бросил киношколу</a>
               <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
             </li>
             <li class="card card_type_book">
               <div class="overlay"></div>
-              <h3 class="card__title" href="#0">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <a class="card__title" href="#0">Книга, где описан один скучный день из жизни рекламного агента</a>
               <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
             </li>
             <li class="card card_type_picture">
               <div class="overlay"></div>
-              <h3 class="card__title" href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <a class="card__title" href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</a>
               <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
             </li>
           </ul>
