--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul class="header__menu header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active">главная</a>
+            <a class="header__link_active" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -34,7 +34,7 @@
       <address class="header__address">
         <a class="address" href="tel:+70000000">+9 999 555 5555</a><br>
         <a class="address" href="mailto:mail@example.com">info@sobaka.ge</a><br>
-        <a class="address">наб. Принсенграхт 263-265, <br> Амстердам</a>
+        <p class="address">наб. Принсенграхт 263-265, <br> Амстердам</p>
       </address>
     </header>
     <main>
@@ -50,31 +50,42 @@
             <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
-        <article>
-          <ul class="lots__card-list lots__card-list-item">
+          <ul class="lots__card-list">
             <li class="card card_type_film">
-              <div class="overlay"></div>
-              <a class="card__title" href="#0">Фильм режиссёра, который бросил киношколу</a>
-              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              <a href="#0">
+                <article class="card-link">
+                  <div class="overlay"></div>
+                  <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                  <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                </article>
+              </a>
             </li>
             <li class="card card_type_book">
-              <div class="overlay"></div>
-              <a class="card__title" href="#0">Книга, где описан один скучный день из жизни рекламного агента</a>
-              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              <a href="#0">
+                <article class="card-link">
+                  <div class="overlay"></div>
+                  <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                  <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                </article>
+              </a>
             </li>
             <li class="card card_type_picture">
-              <div class="overlay"></div>
-              <a class="card__title" href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</a>
-              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              <a href="#0">
+                <article class="card-link">
+                  <div class="overlay"></div>
+                  <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                  <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                </article>
+              </a>
             </li>
+            </article>
           </ul>
-        </article>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
@@ -85,10 +96,12 @@
           alt="Логотип проекта"
           />
         </div>
-        <div>
+        <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p class="about__text no-margin-bottom">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          <div class="about__text">
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          </div>
         </div>
       </section>
     </main>
@@ -96,7 +109,7 @@
         <address>
           <a class="address" href="tel:+70000000">+9 999 555 5555</a><br>
           <a class="address" href="mailto:mail@example.com">info@sobaka.ge</a><br>
-          <a class="address">наб. Принсенграхт 263-265, <br> Амстердам</a>
+          <p class="address">наб. Принсенграхт 263-265, <br> Амстердам</p>
         </address>
         <nav>
           <ul class="footer__menu-list">
@@ -111,7 +124,6 @@
             </li>
           </ul>
         </nav>
-        <div>
           <ul class="footer__social-list footer__social-list-item">
             <li>
               <a href="#0">
@@ -141,7 +153,6 @@
               </a>
             </li>
           </ul>
-        </div>
     </footer>
   </body>
 </html>
